--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 body {
   font-family: 'Raleway', sans-serif;
 }
+#footer {
+  font-size: 0.8em;
+  text-align: left;
+  font-family: Georgia, "Times New Roman", serif;
+  border-top: 1px;
+}
