--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 body {
+  font-family: 'Lato', sans-serif;
+}
+
+#heads {
   font-family: 'Raleway', sans-serif;
 }
+
+#subheads {
+  font-family: 'Open Sans Condensed', sans-serif;
+}
+
 #footer {
   font-size: 0.8em;
   text-align: left;
