--- a/style.css
+++ b/style.css
@@ -1,6 +1,32 @@
 body {
   font-family: 'Raleway', sans-serif;
 }
+
+#nav1 {
+  padding: 0;
+}
+#nav1 li {
+    list-style-type: none;
+    float: left;
+    margin: 0;
+    padding: 0;
+    width: 25%;
+}
+#nav1 a:link, a:visited {
+  display: block;
+  color: #ebe3ce;
+  background-color: #8B0000;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  padding: 4px;
+  font-family: Helvetica, Arial, sans-serif;
+}
+#nav1 a:hover, a:active{
+  color: #ebe3ce;
+  background-color: #000000;
+}
+
 #footer {
   font-size: 0.8em;
   text-align: left;
