--- a/style.css
+++ b/style.css
@@ -16,17 +16,17 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    font-size:25px;
+    height: 100%;
+    font-size:3rem;
 }
 
 #nav1 a:link, a:visited {
   display: block;
   color: #ffffff;
   background-color: #000000;
-  font-weight: bold;
-  text-align: center;
   text-decoration: none;
-  padding: 4px;
+  padding: 20px;
+  padding-left: 50px;
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
@@ -35,13 +35,19 @@ body {
   background-color: #000000;
 }
 
+#nav2{
+  text-align: center
+}
 #subheads {
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
 #footer {
-  font-size: 0.8em;
+  list-style-type: none;
+  color: #ffffff;
+  background-color: #000000;
+  font-size: 3rem;
   text-align: left;
-  font-family: Georgia, "Times New Roman", serif;
+  font-family: 'Open Sans Condensed', sans-serif;
   border-top: 1px;
 }
