--- a/style.css
+++ b/style.css
@@ -42,7 +42,14 @@ body {
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
+#footer a:link, a:visited {
+  color: #ffffff;
+  background-color: #000000;
+  text-decoration:none;
+}
+
 #footer {
+  padding-right: 50px;
   list-style-type: none;
   color: #ffffff;
   background-color: #000000;
@@ -50,4 +57,18 @@ body {
   text-align: left;
   font-family: 'Open Sans Condensed', sans-serif;
   border-top: 1px;
+  text-align: right;
+}
+#footer li{
+  display:inline;
+}
+
+#bodycontainer {
+  background-color: #ffffff;
+  width: 95%;
+  float: center;
+}
+
+#container {
+
 }
