--- a/style.css
+++ b/style.css
@@ -15,18 +15,19 @@ body {
     float: left;
     margin: 0;
     padding: 0;
-    width: 25%;
+    width: 100%;
+    height: 100%;
+    font-size:3rem;
 }
 
 #nav1 a:link, a:visited {
   display: block;
-  color: #ebe3ce;
-  background-color: #8B0000;
-  font-weight: bold;
-  text-align: center;
+  color: #ffffff;
+  background-color: #000000;
   text-decoration: none;
-  padding: 4px;
-  font-family: Helvetica, Arial, sans-serif;
+  padding: 20px;
+  padding-left: 50px;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 #nav1 a:hover, a:active{
@@ -34,23 +35,34 @@ body {
   background-color: #000000;
 }
 
-img {
-border: 0;
+#nav2{
+  text-align: center
 }
-
 #subheads {
   font-family: 'Open Sans Condensed', sans-serif;
-
-#footer {
-  font-size: 0.8em;
-  text-align: left;
-  font-family: Georgia, "Times New Roman", serif;
-  border-top: 1px;
 }
 
-<<<<<<< Updated upstream
-#MISC
-=======
+#footer a:link, a:visited {
+  color: #ffffff;
+  background-color: #000000;
+  text-decoration:none;
+}
+
+#footer {
+  padding-right: 50px;
+  list-style-type: none;
+  color: #ffffff;
+  background-color: #000000;
+  font-size: 3rem;
+  text-align: left;
+  font-family: 'Open Sans Condensed', sans-serif;
+  border-top: 1px;
+  text-align: right;
+}
+#footer li{
+  display:inline;
+}
+
 #bodycontainer {
   background-color: #ffffff;
   width: 95%;
@@ -71,4 +83,3 @@ border: 0;
   color: #ffffff;
   background-color: #000000;
 }
->>>>>>> Stashed changes
