--- a/style.css
+++ b/style.css
@@ -89,3 +89,9 @@ body {
   list-style-type: none;
   text-decoration: none;
 }
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  font-family:'Raleway', sans-serif;
+}
