--- a/style.css
+++ b/style.css
@@ -96,3 +96,19 @@ h1 {
   font-family:'Raleway', sans-serif;
   text-align: center;
 }
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /*16:9 ratio*/
+  padding top: 25px;
+  height: 0;
+}
+
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0; 
+  width: 100%;
+  height: 100%;
+}
