--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@ body {
 #navfilm a:link, a:visited{
   color: #ffffff;
   background-color: #000000;
+  list-style-type: none;
+  text-decoration: none;
 }
 
 #navposters {
