--- a/style.css
+++ b/style.css
@@ -112,3 +112,15 @@ h1 {
   width: 100%;
   height: 100%;
 }
+
+.image {
+   position: relative;
+   width: 100%; /* for IE 6 */
+}
+
+h2 {
+   position: absolute;
+   top: 450px;
+   left: 0;
+   width: 100%;
+}
