--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 6rem;
   margin-bottom: 1rem;
   font-family:'Raleway', sans-serif;
   text-align: center;
@@ -122,10 +122,14 @@ h1 {
 }
 
 h2 {
+  font-family: "Open Sans Condensed", sans-serif;
+  font-size: 4rem;
+  text-align: center;
    position: inherit;
    top: 450px;
    left: 0;
    width: 100%;
+   padding-top: 1rem;
 }
 
 #movie_menu li {
