--- a/style.css
+++ b/style.css
@@ -67,7 +67,6 @@ body {
 #bodycontainer {
   background-color: #f0f0f0;
   width: 100%;
-  float: center;
 }
 
 #container {
@@ -101,7 +100,7 @@ h1 {
 .videoWrapper {
   position: relative;
   padding-bottom: 56.25%; /*16:9 ratio*/
-  padding top: 25px;
+  padding-top: 10%;
   height: 0;
 }
 
@@ -113,9 +112,6 @@ h1 {
   width: 100%;
   height: 100%;
 }
-<<<<<<< HEAD
-
-<<<<<<< HEAD
 .image {
    position: relative;
    width: 100%; /* for IE 6 */
@@ -152,5 +148,3 @@ h2 {
   padding-left: 0px;
   font-family: 'Open Sans Condensed', sans-serif;
 }
-=======
->>>>>>> origin/master
