--- a/style.css
+++ b/style.css
@@ -73,16 +73,48 @@ body {
 
 }
 
-#navfilm {
-  color: #ffffff;
-  background-color: #000000;
-  list-style-type: none;
-  text-decoration: none;
+/* Style The Dropdown Button */
+.dropbtn {
+    background-color: #C0C0C0;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
-#navfilm a:link, a:visited{
-  color: #ffffff;
-  background-color: #000000;
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    padding-top: 5%;
+    padding-left: 50%;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #000000;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #C0C0C0}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+    background-color: #000000;
 }
 
 #navposters {
