--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@ body {
     justify-content: flex-end;
   }
 }
+.bio, .bio2 {
+  display:flex;
+  flex-flow: row;
 
+}
 #heads {
   font-family: 'Raleway', sans-serif;
 }
