--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@ body {
     justify-content: flex-end;
   }
 
-  .bio, .bio2 {
+  .bio, .bio2, .all {
     flex-flow:column;
+    max-width: 600px;
   }
 
 }
@@ -23,6 +24,8 @@ body {
   display:flex;
   flex-flow: row;
 }
+
+
 
 #heads {
   font-family: 'Raleway', sans-serif;
