--- a/style.css
+++ b/style.css
@@ -310,3 +310,22 @@ h3 {
   from {opacity: .4}
   to {opacity: 1}
 }
+
+th, td {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+tr:hover {
+  background-color: #f5f5f5
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2
+}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
