--- a/style.css
+++ b/style.css
@@ -322,14 +322,14 @@ th, td {
 }
 
 tr:hover {
-  background-color: #f5f5f5
+  background-color: #f5f5f5;
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2
+  background-color: #f2f2f2;
 }
 
 th {
-    background-color: #4CAF50;
+    background-color: black;
     color: white;
 }
