--- a/style.css
+++ b/style.css
@@ -34,6 +34,19 @@ tr:hover {
   background-color: #f5f5f5;
 }
 
+a:link, a:visited {
+  color: black;
+}
+
+a:hover {
+  color: #fece2f;
+}
+
+a:active {
+  background-color: #fece2f;
+}
+
+
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
