--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ h3 {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
   position: relative;
   margin: auto;
 }
@@ -321,12 +321,12 @@ h3 {
 /* Caption text */
 .text {
   color: #f2f2f2;
-  font-size: 15px;
+  font-size: 30px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
   width: 100%;
-  text-align: center;
+  text-align: left;
 }
 
 /* Number text (1/3 etc) */
@@ -353,7 +353,6 @@ h3 {
 .active, .dot:hover {
   background-color: #717171;
 }
-
 
 /* Fading animation */
 .fade {
