--- a/style.css
+++ b/style.css
@@ -61,10 +61,20 @@ th {
   flex-flow: column;
 }
 
+@media (max-width: 800px) {
+  .logo-small {
+    display: none;
+  }
+}
+
 @media (min-width: 800px){
   nav ul{
     display: flex;
   }
+
+  .logo-large {
+  display: none;
+}
 
   .navigation {
     flex-flow: row;
