--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ tr:hover {
   background-color: #f5f5f5;
 }
 
-a:link, a:visited, a:active {
+a:link, a:visited {
   color: black;
 }
 
@@ -56,19 +56,15 @@ th {
     color: white;
 }
 
-.bio, .bio2, .all {
-  display: flex;
-  flex-flow: column;
-}
-
 .logo-large {
-    margin-left: -1.5em;
+  margin-left: -1.5em;
 }
 
 @media (max-width: 800px) {
   .logo-small {
     display: none;
   }
+}
 
 @media (min-width: 800px){
   nav ul{
@@ -76,9 +72,8 @@ th {
   }
 
   .logo-large {
-  display: none;
-
-}
+    display: none;
+  }
 
   .navigation {
     flex-flow: row;
@@ -90,7 +85,8 @@ th {
   }
 
   .bio, .bio2, .all {
-    flex-flow:row;
+    flex-flow:column;
+    max-width: 600px;
   }
 
 }
@@ -301,7 +297,7 @@ h3 {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100%;
+  max-width: 1000px;
   position: relative;
   margin: auto;
 }
@@ -335,12 +331,12 @@ h3 {
 /* Caption text */
 .text {
   color: #f2f2f2;
-  font-size: 30px;
+  font-size: 15px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
   width: 100%;
-  text-align: left;
+  text-align: center;
 }
 
 /* Number text (1/3 etc) */
@@ -367,6 +363,7 @@ h3 {
 .active, .dot:hover {
   background-color: #717171;
 }
+
 
 /* Fading animation */
 .fade {
