--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ th {
   width:100%;
   background:black;
   color:white;
+  margin-bottom: -16px;
+  padding-top: 16px;
+}
+
+#nav1{
+  display:none;
 }
 
 @media (max-width: 800px) {
