--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ th {
   padding-top: 16px;
 }
 
+#nav1 {
+  display: none;
+}
+
 @media (max-width: 800px) {
   .logo-small {
     display: none;
@@ -73,7 +77,7 @@ th {
 }
 
 @media (min-width: 800px){
-  nav ul{
+  #nav1{
     display: flex;
   }
 
