--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav ul li{
   display: block;
 }
 
-table {
+.table {
     table-layout: fixed;
     max-width: none;
 }
@@ -75,9 +75,18 @@ th {
   .logo-small {
     display: none;
   }
+
+th, td {
+  font-size: 1.3rem;
+}
 }
 
 @media (min-width: 800px){
+
+th, td {
+  font-size: 1.5rem;
+}
+
   #nav1{
     display: flex;
   }
