--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ nav ul li{
 .table {
     table-layout: fixed;
     max-width: none;
+    flex-flow: wrap;
 }
 
 th, td {
@@ -64,7 +65,6 @@ th {
     color: white;
 }
 
-
 .site{
   display:block;
   width:100%;
@@ -82,6 +82,10 @@ th {
   .logo-small {
     display: none;
   }
+  .table{
+    display: flex;
+    flex-flow: wrap;
+  }
 
 th, td {
   font-size: 1.3rem;
@@ -89,7 +93,10 @@ th, td {
 }
 
 @media (min-width: 800px){
-
+  .table{
+    display: flex;
+    flex-flow: wrap;
+  }
 th, td {
   font-size: 1.5rem;
 }
