--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ th, td {
     padding: 15px;
     text-align: left;
     border-bottom: 1px solid #ddd;
+    width: 100%;
 }
 
 tr:hover {
@@ -104,6 +105,7 @@ th, td {
   }
 th, td {
   font-size: 1.5rem;
+  width: 80%;
 }
 
   #nav1{
