--- a/style.css
+++ b/style.css
@@ -84,17 +84,20 @@ th {
   .logo-small {
     display: none;
   }
+
   .bio, .bio2, .all {
     display: flex;
     flex-flow: row;
   }
+
   .table{
     display: flex;
     flex-flow: wrap;
   }
 
 th, td {
-  font-size: 1.3rem;
+  font-size: 1rem;
+  width: 60%;
 }
 }
 
@@ -103,8 +106,9 @@ th, td {
     display: flex;
     flex-flow: wrap;
   }
+
 th, td {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   width: 80%;
 }
 
