--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 .navigation{
   display: flex;
   flex-flow: column;
+
 }
 
 nav ul{
@@ -77,6 +78,7 @@ th {
 
 #nav1 {
   display: none;
+  padding-bottom: 20px;
 }
 
 
@@ -252,7 +254,9 @@ th, td {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #C0C0C0}
+.dropdown-content a:hover {
+  background-color: #C0C0C0;
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -367,10 +371,9 @@ ul#jump li:first-child:before {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
   position: relative;
   margin: auto;
-  background-color: black;
 }
 
 /* Next & previous buttons */
@@ -393,16 +396,6 @@ ul#jump li:first-child:before {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-
-/* On hover, add a black background color with a little bit see-through */
-.slideshow-container:hover{
-  background-color: black;
-  opacity: 0.6;
-}
-
-/*.slideimage:hover, .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.6);
-  }*/
 
 /* Caption text */
 .text {
@@ -460,4 +453,10 @@ ul#jump li:first-child:before {
 .table td:before {
   content: attr(datalabel);
   float: left;
+}
+
+.crisis {
+  visibility: hidden;
+  color: white;
+  font-size: 11px;
 }
