Moved inline to css

--- a/style.css
+++ b/style.css
@@ -489,3 +489,32 @@ ul#jump li:first-child:before {
   color: white;
   font-size: 11px;
 }
+
+#carousel {
+    width: 100%;
+    margin-bottom: -25px;
+    white-space:nowrap;
+    overflow-x: hidden;
+    overflow-x: scroll;
+}
+
+#carousel .slide {
+    display: inline-block;
+}
+
+@media (max-width: 950px) {
+
+  #carousel img {
+    height: 356px;
+    width: 240px;
+  }
+}
+
+@media (min-width: 550px) {
+
+  #carousel img {
+
+    height: 444px;
+    width: 300px;
+  }
+}
