--- a/style.css
+++ b/style.css
@@ -164,10 +164,10 @@ th, td {
 a:link, a:visited{
   color: black;
 }
-#bodycontainer a:hover {
+#filmmakers a:hover {
   color:#fece2f;
 }
-#bodycontainer a:visited {
+#filmmakers a:visited {
   color:black;
 }
 
