--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ nav ul li{
     flex-flow: wrap;
 }
 
+.TableLinks a:link; a:hover; a:visited; a:active {
+  text-decoration: none;
+}
+
 th, td {
     padding: 15px;
     text-align: left;
