--- a/style.css
+++ b/style.css
@@ -586,3 +586,16 @@ h1.arrow {
     margin-bottom: -10px;
     text-shadow: 2px 2px 5px #2a2a2a;
 }
+
+@-moz-document url-prefix() {
+    .logo-small {
+        height: 1.4em;
+    }
+}
+
+@supports (-ms-ime-align:auto) {
+  .logo-small {
+      height: 44px;
+  }
+}
+}
