--- a/style.css
+++ b/style.css
@@ -132,12 +132,14 @@ th, td {
 }
 }
 
-@media (min-width: 1100px){
+@media (min-width: 1080px){
   #navposters img{
     width: 510px;
     display: flex;
     flex: column;
     padding: 2px;
+    position: relative;
+    margin: 0 auto;
   }
 }
 
@@ -336,7 +338,7 @@ text-align: center;
     position: relative;
     display: inline-block;
     padding-top: 5%;
-    padding-left: 50%;
+    padding-left: 45%;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -372,6 +374,8 @@ text-align: center;
   text-decoration: none;
   column-count: 2;
   column-gap: 15px;
+  position: relative;
+  margin: 0 auto;
 }
 
 h1 {
