--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ text-align: center;
 
 #nav1 a:link, a:visited {
   display: block;
-  color: #fece2f;
+  color: #ffffff;
   background-color: #000000;
   text-decoration: none;
   padding: 10px;
