--- a/style.css
+++ b/style.css
@@ -374,8 +374,7 @@ text-align: center;
   text-decoration: none;
   column-count: 2;
   column-gap: 15px;
-  position: relative;
-  margin: 0 auto;
+  margin: auto;
 }
 
 h1 {
@@ -397,8 +396,10 @@ h1 {
   top: 0;
   left: 0;
   right: 0;
-  width: 100%;
-  height: 100%;
+  width: 85%;
+  height: 85%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h2 {
@@ -477,11 +478,18 @@ ul#jump li:first-child:before {
   display: flex;
 }
 
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 100%;
   position: relative;
   margin: auto;
+}
+
+.photos {
+  text-align: center;
+  font-size: 0.75rem;
+  color: gray;
 }
 
 /* Next & previous buttons */
