--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ th, td {
 #words {
   padding: 5px;
   max-width: 800px;
+  text-align: left;
 }
 
 #words a:link, a:visited{
@@ -249,7 +250,7 @@ text-align: inherit;
   max-width: 33%;
   padding-left: 4em;
   padding-right: 4em;
-text-align: center;
+  text-align: left;
 }
 
 .bio2 {
@@ -259,11 +260,11 @@ text-align: center;
   max-width: 40%;
   padding-left: 1em;
   padding-right: 1em;
-  text-align: center;
+  text-align: left;
 }
 
 #about {
-  text-align: center;
+  text-align: left;
 }
 
 
@@ -339,7 +340,6 @@ text-align: center;
   flex-flow: row;
   flex-wrap: wrap;
   max-width: 100%;
-  text-align: center;
 }
 
 /* Style The Dropdown Button */
