--- a/style.css
+++ b/style.css
@@ -161,8 +161,43 @@ th, td {
 }
 }
 
+.card {
+    border-top: 10px solid #fece2f;
+    padding: 0;
+    margin-bottom: 20px;
+    align-content: center;
+}
+
+.card p {
+    padding: 10px;
+}
+
+.card img {
+  width: 100%;
+  padding-top: 10px; 
+}
+
 
 @media (min-width: 800px){
+
+  .card-container {
+      display: flex;
+      flex-flow: column;
+      max-width: 75%;
+      margin-left: auto;
+      margin-right: auto;
+  }
+
+  .card-container {
+    flex-flow: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+  }
+
+  .card {
+    width: 45%;
+  }
+
   .table{
     display: flex;
     flex-flow: wrap;
@@ -207,23 +242,6 @@ th, td {
   }
 }
 
-#name {
-  text-align: center;
-  max-width: 800px;
-}
-#words {
-  padding: 5px;
-  max-width: 800px;
-  text-align: left;
-}
-
-#words a:link, a:visited{
-  color: black;
-}
-
-a:link, a:visited{
-  color: black;
-}
 #filmmakers a:hover {
   color:#fece2f;
 }
@@ -278,7 +296,7 @@ text-align: inherit;
 }
 
 #about {
-  text-align: left;
+  text-align: center;
 }
 #about a:visited {
   color:black;
@@ -602,6 +620,7 @@ ul#jump li:first-child:before {
     max-height: auto;
   }
 }
+
 
 @media (min-width: 550px) {
 
