--- a/style.css
+++ b/style.css
@@ -692,3 +692,10 @@ h1.arrow {
     width: 200px;
     align-items: center;
 }
+
+.photoscroll{
+  font-size: 50px;
+}
+.photo-prev{
+  padding-right: 100px;
+}
