--- a/style.css
+++ b/style.css
@@ -116,6 +116,12 @@ th {
   padding-bottom: 20px;
 }
 
+#searchlink p{
+  text-align: left;
+  padding-left: 0%;
+  max-width: 100%;
+}
+
 #searchlink {
   text-align: left;
   padding-left: 10%;
