center align of photos_fixed

--- a/style.css
+++ b/style.css
@@ -688,6 +688,7 @@ h1.arrow {
     white-space:nowrap;
     overflow-x: hidden;
     overflow-x: scroll;
+    text-align: center;
 }
 
 .directors .slide {
