--- a/style.css
+++ b/style.css
@@ -218,6 +218,14 @@ th, td {
   width: 45%;
 }
 
+li#nav2 {
+    margin-right: 15px;
+}
+
+.navigation li {
+  text-align: center;
+}
+
   /* Caption text */
   .text {
     color: #f2f2f2;
@@ -272,7 +280,8 @@ th, td {
     flex-flow: column;
     max-width: 100%;
   }
-}
+
+} /*Ends query */
 
 #name {
   text-align: center;
@@ -370,7 +379,7 @@ text-align: inherit;
     padding: 0;
     width: 100%;
     height: 100%;
-    font-size:2rem;
+    font-size: 2rem;
 }
 
 #nav1 a:link, a:visited {
@@ -379,7 +388,7 @@ text-align: inherit;
   background-color: #000000;
   text-decoration: none;
   padding: 10px;
-  padding-left: 50px;
+  padding-left: 20px;
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
@@ -391,6 +400,7 @@ text-align: inherit;
 #nav2{
   text-align: center
 }
+
 #subheads {
   font-family: 'Open Sans Condensed', sans-serif;
 }
@@ -676,9 +686,9 @@ h1.arrow {
 }
 
 @-moz-document url-prefix() {
-.logo-small {
-    height: 1.4em;
-  }
+    .logo-small {
+        height: 1.4em;
+    }
 }
 
 @supports (-ms-ime-align:auto) {
